--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "lodash": "^4.17.4",
     "promise-settle": "^0.3.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
+    "react": "^16.0.0",
     "shallowequal": "^1.0.1"
   },
   "devDependencies": {
-    "amex-jest-preset-react": "^2.0.0",
+    "amex-jest-preset-react": "^4.0.0-0",
     "babel-cli": "^6.24.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
-    "enzyme": "^2.8.2",
-    "enzyme-to-json": "^1.5.1",
+    "enzyme": "^3.1.1",
+    "enzyme-to-json": "^3.2.1",
     "eslint": "^3.19.0",
-    "eslint-config-amex": "^4.0.0",
-    "jest": "^20.0.4",
+    "eslint-config-amex": "^6.0.0",
+    "jest": "^21.2.1",
     "react-async-bootstrapper": "^1.1.1",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
