--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
     "preset": "amex-jest-preset-react"
   },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
     "hoist-non-react-statics": "^1.2.0",
     "lodash": "^4.17.4",
-    "promise-settle": "^0.3.0",
     "prop-types": "^15.5.10",
-    "react": "^16.0.0",
     "shallowequal": "^1.0.1"
   },
   "devDependencies": {
@@ -30,16 +27,21 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.1",
     "enzyme-to-json": "^3.2.1",
     "eslint": "^3.19.0",
     "eslint-config-amex": "^6.0.0",
     "jest": "^21.2.1",
+    "react": "^16.0.0",
     "react-async-bootstrapper": "^1.1.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
     "react-test-renderer": "^16.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0"
   }
 }
