--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iguazu",
-  "version": "2.0.0-0",
+  "version": "2.0.0",
   "description": "An asynchronous data flow solution for React/Redux applications",
   "author": "Maia Teegarden",
   "license": "Apache-2.0",
