--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.2.0",
   "description": "An asynchronous data flow solution for React/Redux applications",
   "author": "Maia Teegarden",
+  "contributors": [
+    "Nickolas Oliver <nickolas.oliver@aexp.com>",
+    "Andrew Curtis <andrew.curtis@aexp.com>"
+  ],
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "scripts": {
