--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "presets": ["env", "react"],
-  "plugins": [
-    "add-module-exports",
-    "transform-object-rest-spread"
-  ]
+  "presets": ["amex"]
 }
