--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "Andrew Curtis <andrew.curtis@aexp.com>"
   ],
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/americanexpress/iguazu.git"
+  },
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
