--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "iguazu",
-  "version": "2.5.2",
+  "version": "3.0.0-0",
   "description": "An asynchronous data flow solution for React/Redux applications",
   "author": "Maia Teegarden",
   "contributors": [
     "Nickolas Oliver <nickolas.oliver@aexp.com>",
-    "Andrew Curtis <andrew.curtis@aexp.com>"
+    "Andrew Curtis <andrew.curtis@aexp.com>",
+    "Michael Tomcal <michael.a.tomcal@aexp.com>"
   ],
   "license": "Apache-2.0",
   "repository": {
@@ -28,8 +29,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "hoist-non-react-statics": "^1.2.0",
-    "lodash": "^4.17.4",
+    "hoist-non-react-statics": "^3.3.0",
     "prop-types": "^15.5.10",
     "shallowequal": "^1.0.1"
   },
@@ -44,14 +44,17 @@
     "eslint-config-amex": "^6.0.0",
     "jest": "^24.1.0",
     "react": "^16.0.0",
-    "react-async-bootstrapper": "^1.1.1",
     "react-dom": "^16.0.0",
-    "react-redux": "^5.0.5",
+    "react-redux": "^7.1.1",
     "react-test-renderer": "^16.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   }
 }
