--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "An asynchronous data flow solution for React/Redux applications",
   "author": "Maia Teegarden",
   "contributors": [
-    "Nickolas Oliver <nickolas.oliver@aexp.com>",
-    "Andrew Curtis <andrew.curtis@aexp.com>"
+    "Andres Escobar <Andres.Escobar@aexp.com> (https://github.com/anescobar1991)",
+    "James Singleton <James.Singleton1@aexp.com> https://github.com/JamesSingleton)",
+    "Jimmy King  <Jimmy.King@aexp.com> (https://github.com/10xLaCroixDrinker)",
+    "Jonathan Adshead <Jonathan.Adshead@aexp.com> (https://github.com/JAdshead)",
+    "Michael Tobia <Michael.M.Tobia@aexp.com> (https://github.com/Francois-Esquire)",
+    "Michael Tomcal <Michael.A.Tomcal@aexp.com> (https://github.com/mtomcal)",
+    "Stephanie Coates  <Stephanie.Coates1@aexp.com> (https://github.com/stephaniecoates)",
+    "Nelly Kiboi <Nelly.J.Kiboi@aexp.com> (https://github.com/nellyk)",
+    "Nickolas Oliver <nickolas.oliver@aexp.com> (https://github.com/PixnBits)",
+    "Andrew Curtis <andrew.curtis@aexp.com> (https://github.com/drewcur)",
+    "Scott McIntyre <scott.mcintyre@aexp.com> (https://github.com/smackfu)"
   ],
   "license": "Apache-2.0",
   "repository": {
@@ -17,7 +26,7 @@
     "build": "babel src --out-dir lib",
     "lint": "eslint --ignore-path .gitignore --ext js,jsx .",
     "prepublish": "npm run build",
-    "test": "jest",
+    "test": "jest && commitlint --from origin/2.x --to HEAD",
     "posttest": "npm run lint"
   },
   "jest": {
@@ -34,6 +43,14 @@
     "shallowequal": "^1.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@semantic-release/changelog": "^3.0.5",
+    "@semantic-release/commit-analyzer": "^6.3.2",
+    "@semantic-release/git": "^7.0.18",
+    "@semantic-release/npm": "^5.3.4",
+    "@semantic-release/release-notes-generator": "^7.3.2",
+    "semantic-release": "^15.13.31",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "amex-jest-preset-react": "^5.0.1",
@@ -49,9 +66,26 @@
     "react-redux": "^5.0.5",
     "react-test-renderer": "^16.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "husky": "^3.0.9"
   },
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/git",
+      "@semantic-release/npm"
+    ],
+    "branch": "2.x"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
