chore(travis): deploy on branch 2.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
         - 12
       deploy:
         on:
-          branch: master
+          branch: 2.x
         provider: script
         skip_cleanup: true
         script:
