chore(workflow): finalize test and release workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,8 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
-      - name: Echo
-        run: echo Hello World
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
