chore(release): add github plugin for better dx

--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       "@semantic-release/npm",
-      "@semantic-release/git"
+      "@semantic-release/git",
+      "@semantic-release/github"
     ],
     "branch": "master"
   },
