--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepublish": "npm run build",
     "test": "jest && npm run test:git-history",
     "test:git-history": "commitlint --from origin/2.x --to HEAD",
-    "posttest": "npm run lint"
+    "test:lockfile": "lockfile-lint -p package-lock.json -t npm -a npm -o https: -c -i",
+    "posttest": "npm run lint && npm run test:lockfile"
   },
   "jest": {
     "preset": "amex-jest-preset-react",
@@ -69,7 +70,8 @@
     "react-test-renderer": "^16.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "semantic-release": "^15.13.31"
+    "semantic-release": "^15.13.31",
+    "lockfile-lint": "^4.3.6"
   },
   "peerDependencies": {
     "react": "^16.0.0"
