chore(main): switch over to main

--- a/.github/workflows/master-health-check.yml
+++ b/.github/workflows/master-health-check.yml
@@ -1,4 +1,4 @@
-name: Master Health Check
+name: Main Health Check
 
 on:
   schedule:
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-        git remote set-branches --add origin master
+        git remote set-branches --add origin main
         git fetch
     - name: Setup Node
       uses: actions/setup-node@v1
