--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "semantic-release": "^17.2.1"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
