--- a/package.json
+++ b/package.json
@@ -57,26 +57,28 @@
     "shallowequal": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/polyfill": "^7.2.5",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.6",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "amex-jest-preset-react": "^6.1.0",
-    "babel-jest": "^24.1.0",
-    "babel-preset-amex": "^3.2.0",
+    "babel-jest": "^27.4.5",
+    "babel-preset-amex": "^3.5.1",
+    "core-js": "^3.20.0",
     "core-js-compat": "3.4.5",
     "enzyme": "^3.1.1",
     "enzyme-to-json": "^3.2.1",
-    "eslint": "^6.5.0",
-    "eslint-config-amex": "^11.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-amex": "^15.0.1",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
     "husky": "^3.0.9",
-    "jest": "^25.1.0",
+    "jest": "^27.4.5",
     "jest-fetch-mock": "^1.2.0",
     "lockfile-lint": "^4.3.6",
     "react": "^16.0.0",
@@ -85,6 +87,7 @@
     "react-test-renderer": "^16.0.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.9",
     "semantic-release": "^17.2.1"
   },
   "peerDependencies": {
